<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_recipe_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/vertical_margin">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_name"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/parent_margin"
            android:hint="@string/recipe_name"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/new_servings"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginTop="@dimen/parent_margin"
            android:hint="@string/recipe_servings"
            android:maxLines="1"
            android:maxLength="4"
            android:inputType="number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ingredients_section"
            style="@style/addRecipeSubtitle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/ingredients_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_name" />

        <include android:id="@+id/new_ingredient"
            layout="@layout/item_add_ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_section"/>

        <Button
            android:id="@+id/add_ingredient_btn"
            style="@style/add_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_btn"
            android:contentDescription="@string/add_ingredient"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_ingredient"/>

        <LinearLayout
            android:id="@+id/ingredient_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_ingredient_btn">
        </LinearLayout>

        <TextView
            android:id="@+id/steps_section"
            style="@style/addRecipeSubtitle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/steps_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_container" />

        <include android:id="@+id/new_step"
            layout="@layout/item_add_step"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps_section"/>

        <Button
            android:id="@+id/add_steps_btn"
            style="@style/add_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_btn"
            android:contentDescription="@string/add_step"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_step"/>

        <LinearLayout
            android:id="@+id/step_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_steps_btn">
        </LinearLayout>

        <Button
            android:id="@+id/add_btn"
            style="@style/nav_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/add_Recipe_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_container" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>