<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/added_ingredient_name"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginBottom="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"/>

    <TextView
        android:id="@+id/added_ingredient_qty"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:layout_marginRight="@dimen/small_padding"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"/>

    <TextView
        android:id="@+id/added_ingredient_meas"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"/>

    <Button
        android:id="@+id/delete_ingredient_btn"
        style="@style/delete_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_btn"
        android:contentDescription="@string/delete_ingredient"/>

</LinearLayout>