<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/add_ingredient_name"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/ingredient_name"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/add_ingredient_quantity"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginRight="@dimen/small_padding"
        android:layout_weight="1"
        android:hint="@string/add_ingredient_qty"
        android:maxLines="1"
        android:maxLength="4"
        android:inputType="number"/>

    <EditText
        android:id="@+id/add_ingredient_measurement"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="@string/add_ingredient_measurement"
        android:maxLines="1"/>

</LinearLayout>